--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.6</version> <relativePath/>
+        <version>3.5.6</version>
+        <relativePath/>
     </parent>
 
     <groupId>org.blackcoffeecoding</groupId>
-    <artifactId>simple-notification-service</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>notification-service</artifactId> <version>1.0-SNAPSHOT</version>
 
     <properties>
         <java.version>17</java.version>
@@ -26,6 +26,24 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.blackcoffeecoding</groupId>
+            <artifactId>device-events-contract</artifactId>
+            <version>1.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/device-events-contract.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
     </dependencies>
 
